added menu for profile and logout on navbar

--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
@@ -13,10 +13,26 @@
 		<div class="navbar-title flex-item" fxFlex>
 			{{title}}
 		</div>
+		<div class="navbar-hamburger flex-item" fxFlex="64px">
+			<button md-icon-button [mdMenuTriggerFor]="menu">
+				<md-icon>more_vert</md-icon>
+			</button>
+		</div>
 	</div>
+	<md-menu #menu="mdMenu">
+		<button md-menu-item>
+			<md-icon>person_pin</md-icon>
+			<span>Profile</span>
+		</button>
+		<button md-menu-item (click)="logout()">
+			<md-icon>exit_to_app</md-icon>
+			<span>Logout</span>
+		</button>
+	</md-menu>
 </md-toolbar>
 <div class="fab-top-container" *ngIf="fabInfo">
 	<button md-fab (click)="fabAction($event)" [mdTooltip]="fabInfo.tooltip" mdTooltipPosition="below">
 		<md-icon>{{fabInfo.icon}}</md-icon>
 	</button>
 </div>
+
