--- a/client/src/app/components/user-group/user-group-list/user-group-list.component.html
+++ b/client/src/app/components/user-group/user-group-list/user-group-list.component.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let group of paginatedUserGroups; let idx = index" class="data-table-row">
+			<div *ngFor="let group of paginatedUserGroups" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
 					(click)="selectUserGroup(group)"
