--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -234,12 +234,12 @@ md-toolbar-row {
 
 .section-single {
     margin: 24px;
-    padding: 0 !important;
+    padding: 24px !important;
 }
 
 .section-multiple {
     margin: 12px;
-    padding: 0 !important;
+    padding: 24px !important;
 }
 
 .section-multiple-container {
@@ -252,7 +252,7 @@ md-toolbar-row {
     font-weight: 400;
     font-weight: normal;
     font-size: 20px;
-    padding: 24px;
+    padding: 16px;
 }
 
 .section-subtitle {
