--- a/client/src/app/components/instrument/instrument-list/instrument-list.component.html
+++ b/client/src/app/components/instrument/instrument-list/instrument-list.component.html
@@ -126,7 +126,7 @@
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let instrument of paginatedInstruments; let idx = index" class="data-table-row">
+			<div *ngFor="let instrument of paginatedInstruments" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
 					(click)="selectInstrument(instrument)"
