--- a/client/src/app/components/instrument/instrument-type-list/instrument-type-list.component.html
+++ b/client/src/app/components/instrument/instrument-type-list/instrument-type-list.component.html
@@ -87,7 +87,7 @@
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
-			<div *ngFor="let type of paginatedInstrumentTypes; let idx = index" class="data-table-row">
+			<div *ngFor="let type of paginatedInstrumentTypes" class="data-table-row">
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
 					(click)="selectInstrumentType(type)"
