--- a/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
@@ -1,77 +1,135 @@
-<md-card class="section-single">
-	<md-card-content>
-		<div class="section-title">Unverified Data Sets</div>
-		<div *ngIf="!isDataLoaded" class="loading-indicator-container">
-			<md-spinner class="loading-indicator-spinner"></md-spinner>
-			<div class="loading-indicator-message">Loading Data...</div>
+<div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browsers before setting this value. -->
+	<div *ngIf="!isDataLoaded" class="loading-indicator-container">
+		<md-spinner class="loading-indicator-spinner"></md-spinner>
+		<div class="loading-indicator-message">{{loadingMessage}}</div>
+	</div>
+	<div *ngIf="isDataLoaded" class="data-table-scrollable">
+		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
+			<div *ngIf="showFilters" class="data-table-filter-container flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
+				<div class="flex-item" fxFlex="152px"></div>
+				<md-input-container *ngIf="showFilters" 
+					[hintLabel]="textFilterStatus.errorMessage" 
+					class="mat-input-container-inline flex-item" 
+					fxFlex
+					[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
+					<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
+				</md-input-container>
+				<md-select [(ngModel)]="filters.status" placeholder="Status" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
+					<md-option *ngFor="let status of statusFilterChoices" [value]="status.value">
+						{{status.label}}
+					</md-option>
+				</md-select>
+			</div>
+			<button md-icon-button 
+				(click)="toggleFilters()" 
+				class="flex-item" 
+				fxFlex="40px"
+				mdTooltip="Filter" 
+				mdTooltipPosition="below">
+				<md-icon>filter_list</md-icon>
+			</button>
+			<button md-icon-button 
+				(click)="toggleSideInfo()" 
+				class="flex-item" 
+				fxFlex="40px" 
+				[mdTooltip]="showSideInfo ? 'Hide Details' : 'Show Details'" 
+				mdTooltipPosition="below">
+				<md-icon>{{showSideInfo ? 'chevron_right' : 'chevron_left'}}</md-icon>
+			</button>
 		</div>
-		<div *ngIf="isDataLoaded" class="data-table">
-			<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-				<div class="truncate flex-item" fxFlex (click)="sortBy('site')">
-					<span class="data-table-header-label-sortable">Site</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'site'}">
-						arrow_downward</md-icon>
-				</div>
-				<div class="truncate flex-item" fxFlex (click)="sortBy('uploadedBy')">
-					<span class="data-table-header-label-sortable">Uploaded By</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'uploadedBy'}">
-						arrow_downward</md-icon>
-				</div>
-				<div class="truncate flex-item" fxFlex (click)="sortBy('uploadedDate')">
-					<span class="data-table-header-label-sortable">Upload Date</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'uploadedDate'}">
-						arrow_downward</md-icon>
-				</div>
-				<div class="truncate flex-item" fxFlex (click)="sortBy('modifiedBy')">
-					<span class="data-table-header-label-sortable">Modified By</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'modifiedBy'}">
-						arrow_downward</md-icon>
-				</div>
-				<div class="truncate flex-item" fxFlex (click)="sortBy('modifiedDate')">
-					<span class="data-table-header-label-sortable">Modified Date</span>
-					<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-						'data-table-header-sort-arrow-reverse':sort.reversed,
-						'data-table-header-sort-arrow-inactive':sort.current !== 'modifiedDate'}">
-						arrow_downward</md-icon>
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					<span class="data-table-header-label">Filename</span>
-				</div>
-				<div class="truncate flex-item" fxFlex="50px" style="text-align:center;">
-					<span class="data-table-header-label">Edit</span>
+		<div class="unselectable data-table-header-row flex-container" fxLayout="row">
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('site')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'site'}">
+					Site
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'site'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('uploadedBy')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'uploadedBy'}">
+					Uploaded By
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'uploadedBy'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('uploadedDate')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'uploadedDate'}">
+					Upload Date
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'uploadedDate'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('modifiedBy')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'modifiedBy'}">
+					Modified By
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'modifiedBy'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-first-column truncate flex-item" fxFlex (click)="sortBy('modifiedDate')">
+				<span class="data-table-header-label-sortable" [ngClass]="{
+					'data-table-header-label-sorted':sort.current == 'modifiedDate'}">
+					Modified Date
+				</span>
+				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
+					'data-table-header-sort-arrow-reverse':sort.reversed,
+					'data-table-header-sort-arrow-inactive':sort.current !== 'modifiedDate'}">
+					arrow_downward
+				</md-icon>
+			</div>
+			<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
+				<span class="data-table-header-label">Edit</span>
+			</div>
+		</div>
+		<div class="data-table-scrollable-area">
+			<div *ngFor="let dataSet of paginatedUnverifiedDataSets" class="data-table-row">
+				<div class="data-table-row-content flex-container" 
+					fxLayout="row" 
+					(click)="selectUnverifiedDataSet(dataSet)"
+					(dblclick)="navigateToUnverifiedDataSet(dataSet)"
+					[ngClass]="{'data-table-row-content-active': dataSet === selectedUnverifiedDataSet}">
+					<div class="data-table-first-column truncate flex-item" fxFlex>
+						{{dataSet.site.name}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{dataSet.uploadedBy ? StringUtils.formatUserName(dataSet.uploadedBy) : ''}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{dataSet.uploadedDate ? DateTimeUtils.getDate(dataSet.uploadedDate) : ''}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{dataSet.modifiedBy ? StringUtils.formatUserName(dataSet.modifiedBy) : ''}}
+					</div>
+					<div class="data-table-column truncate flex-item" fxFlex>
+						{{dataSet.modifiedDate ? DateTimeUtils.getDate(dataSet.modifiedDate) : ''}}
+					</div>
+					<div class="data-table-last-column flex-item" fxFlex="40px" style="text-align:center;">
+						<md-icon [routerLink]="dataSet.id" mdTooltip="Edit" mdTooltipPosition="after" style="color:#07F;cursor:pointer;margin-top:-4px;">edit</md-icon>
+					</div>
 				</div>
 			</div>
-			<div *ngFor="let dataSet of dataSets; let isOdd = odd" class="data-table-row flex-container" fxLayout="row" [ngClass]="{'data-table-odd-row': isOdd}">
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.site.name}}
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.uploadedBy ? StringUtils.formatUserName(dataSet.uploadedBy) : ''}}
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.uploadedDate ? DateTimeUtils.getDate(dataSet.uploadedDate) : ''}}
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.modifiedBy ? StringUtils.formatUserName(dataSet.modifiedBy) : ''}}
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.modifiedDate ? DateTimeUtils.getDate(dataSet.modifiedDate) : ''}}
-				</div>
-				<div class="truncate flex-item" fxFlex>
-					{{dataSet.filename}}
-				</div>
-				<div class="flex-item" fxFlex="50px" style="text-align:center;">
-					<md-icon [routerLink]="'../unverified-data-set/' + dataSet.id" mdTooltip="Edit" mdTooltipPosition="after" style="color:#07F;cursor:pointer;">edit</md-icon>
-				</div>
-			</div>
 		</div>
-	</md-card-content>
-</md-card>
+		<app-pagination #pagination
+			[paginfo]="paginfo"
+			[showPageSelector]="true" 
+			[showFirstLastPage]="true"
+			(changed)="applyPagination()">
+		</app-pagination>
+	</div>
+</div>
