--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -1,6 +1,6 @@
 
 <md-sidenav-container fullscreen class="navdrawer-container">
-	<md-sidenav #navdrawer mode="over" opened="false" class="navdrawer-contents">
+	<md-sidenav #navdrawer mode="side" opened="true" class="navdrawer-contents">
 		<app-navigation-drawer [sidenav]="navdrawer"></app-navigation-drawer>
 	</md-sidenav>
 	<md-sidenav-container class="sideinfo-container" fullscreen [ngClass]="{'sideinfo-force-close':isSideinfoDisabled()}">
